# auctions

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile.prod  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202604270001_auction_snapshots.py  202604270002_lot_workspace.py  202604270003_detail_observations.py  202604280001_add_users.py  202604280002_add_filter_presets.py  202604280003_add_analysis_controls.py  202604280004_add_auction_analysis_config.py  202604280005_expand_auction_analysis_config.py  202604280006_add_lot_scoring_metadata.py  202604280007_add_owner_scoring_profile.py  202604280008_add_lot_ai_analysis.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  auction.py  auction_analysis_config.py  filter_preset.py  user.py
backend/app/schemas/: analysis_config.py  auctions.py  auth.py  filter_presets.py
backend/app/seeds/: default_user.py
backend/app/services/: auction_ai_ranking.py  auction_analysis.py  auction_analysis_config.py  auction_catalog.py  auction_datagrid_payload.py  auction_scoring.py  auction_scoring_evaluation.py  auction_sources.py  auction_sync.py  auction_sync.py.bak  auction_values.py  auction_workspace.py  auth.py  (+4 more)
backend/tests/: test_auction_ai_ranking.py  test_auction_catalog_sql.py  test_auction_rating.py  test_auction_scoring_evaluation.py  test_auction_sources.py  test_auction_sync_worker.py  test_auction_workspace_batch_commit.py  test_auction_workspace_detail_cache.py  test_tbankrot_scraper.py
(+41 files in other folders)
